--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -694,11 +694,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.65976489, 0.5802    , 0.39618712, 0.36920536, 0.96543582],\n",
-       "       [0.40909296, 0.90851749, 0.03155269, 0.4267314 , 0.92314224],\n",
-       "       [0.88985028, 0.17823477, 0.22177949, 0.14897434, 0.93323678],\n",
-       "       [0.99335122, 0.87877517, 0.17589929, 0.72628089, 0.88927867],\n",
-       "       [0.37654527, 0.91387873, 0.56186113, 0.97344784, 0.24226745]])"
+       "array([[0.16711108, 0.10846655, 0.65913313, 0.97316134, 0.32002499],\n",
+       "       [0.95816595, 0.17671163, 0.29431695, 0.62355323, 0.21448099],\n",
+       "       [0.96296995, 0.08947554, 0.76402182, 0.46247073, 0.51005926],\n",
+       "       [0.16716801, 0.27047471, 0.24179014, 0.99097636, 0.1935522 ],\n",
+       "       [0.21265558, 0.73279119, 0.01757137, 0.97532813, 0.98940897]])"
       ]
      },
      "execution_count": 31,
@@ -719,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "6"
       ]
      },
      "execution_count": 32,
@@ -740,7 +740,7 @@
     {
      "data": {
       "text/plain": [
-       "array([5, 7, 2, 3, 1])"
+       "array([5, 6, 7, 3, 6])"
       ]
      },
      "execution_count": 33,
@@ -761,11 +761,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[6, 7, 9, 4, 4],\n",
-       "       [7, 9, 1, 8, 4],\n",
-       "       [2, 5, 2, 4, 3],\n",
-       "       [3, 1, 5, 9, 6],\n",
-       "       [8, 8, 9, 4, 4]])"
+       "array([[3, 9, 9, 5, 8],\n",
+       "       [6, 6, 9, 1, 3],\n",
+       "       [3, 3, 2, 1, 5],\n",
+       "       [8, 7, 9, 4, 9],\n",
+       "       [1, 1, 1, 2, 9]])"
       ]
      },
      "execution_count": 34,
@@ -786,8 +786,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[3, 2],\n",
-       "       [4, 2]])"
+       "array([[4, 1],\n",
+       "       [5, 6]])"
       ]
      },
      "execution_count": 35,
@@ -1231,27 +1231,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[77 24 68  8 78 49 47  3 41 53]\n",
-      "  [16 44 32 59 90 96  1 17  4 57]\n",
-      "  [64 83 84 25 99  8 25 42 15 55]\n",
-      "  [ 6 81 94 38 19 44 84 99 63 27]\n",
-      "  [82 58 23 85 44 34 58 44 36 95]\n",
-      "  [47 24 72 15  6 60 46 36 57 60]\n",
-      "  [48 78 50 24 22 32 33 86  2 46]\n",
-      "  [13 95  5 73 47 56 10 15 66 51]\n",
-      "  [56 47 42 29 55 33  2 82 28 99]\n",
-      "  [39 72 69 38 56 96 93 77 77 41]]\n",
+      "[[[53 19 63 51 15 73 20 78 66 58]\n",
+      "  [61 66 66 45 15 34 51 89 87 33]\n",
+      "  [ 5 55 33 39 77 54 40 39 76 98]\n",
+      "  [ 8 31 59 29 52 33 84 97 67 49]\n",
+      "  [ 1  2 37 18 61 76 90 76 15 54]\n",
+      "  [21  6 25 69  1 48 53 81  4 23]\n",
+      "  [66  3 87 95 46 39  7 45 72 71]\n",
+      "  [ 6 75 28  2 28 64 52 89 65 43]\n",
+      "  [21  4 96 73 12  9 93 28 50 54]\n",
+      "  [66 69 91 65 55 88 24 56 74 49]]\n",
       "\n",
-      " [[26 50 10 91 34 73 27 67 61 57]\n",
-      "  [36 39 66 57 15 62 82 65 90 22]\n",
-      "  [46  9 71 83 77 58 85  9  6 85]\n",
-      "  [37  8 33 45 44  9  5 15 56 73]\n",
-      "  [19 83 27  7 68 93 48 47  3 94]\n",
-      "  [39 17 72  8 28 18 89  5 89 98]\n",
-      "  [56 10 61 11 58 12 65 82 23 69]\n",
-      "  [63 20 11 53  4 20 39 45  5 20]\n",
-      "  [11 15 35 33 15  8 57 65 57  7]\n",
-      "  [23 80 45 89 56  5 11 67 34 54]]]\n"
+      " [[17 45 29 40 10 10 65 10 65 47]\n",
+      "  [78 74 25 68 46 58  3 77 95 79]\n",
+      "  [68 76 49 50 34 94 38 49 28 41]\n",
+      "  [73 48 72 64 12 81 79 72 85 55]\n",
+      "  [53 38 36 65 62 80 43 27 51 74]\n",
+      "  [48 45 27 28 31 77 28 72 52 13]\n",
+      "  [24 56 88 14 14 65 12 32 36 46]\n",
+      "  [61 16 74 40 63 36 19 54 57 13]\n",
+      "  [19 63 73 33 40  3 95  9 83 20]\n",
+      "  [60  7 77 74 61 86 52 38 47 70]]]\n"
      ]
     }
    ],
@@ -1270,27 +1270,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1 2 1 2 1 2 2 2 2 1]\n",
-      "  [2 2 2 1 1 1 2 2 2 1]\n",
-      "  [1 1 1 2 1 2 2 2 2 1]\n",
-      "  [2 1 1 2 2 2 1 1 1 2]\n",
-      "  [1 1 2 1 2 2 1 2 2 1]\n",
-      "  [2 2 1 2 2 1 2 2 1 1]\n",
-      "  [2 1 1 2 2 2 2 1 2 2]\n",
-      "  [2 1 2 1 2 1 2 2 1 1]\n",
-      "  [1 2 2 2 1 2 2 1 2 1]\n",
-      "  [2 1 1 2 1 1 1 1 1 2]]\n",
+      "[[[1 2 1 1 2 1 2 1 1 1]\n",
+      "  [1 1 1 2 2 2 1 1 1 2]\n",
+      "  [2 1 2 2 1 1 2 2 1 1]\n",
+      "  [2 2 1 2 1 2 1 1 1 2]\n",
+      "  [2 2 2 2 1 1 1 1 2 1]\n",
+      "  [2 2 2 1 2 2 1 1 2 2]\n",
+      "  [1 2 1 1 2 2 2 2 1 1]\n",
+      "  [2 1 2 2 2 1 1 1 1 2]\n",
+      "  [2 2 1 1 2 2 1 2 1 1]\n",
+      "  [1 1 1 1 1 1 2 1 1 2]]\n",
       "\n",
-      " [[2 1 2 1 2 1 2 1 1 1]\n",
-      "  [2 2 1 1 2 1 1 1 1 2]\n",
-      "  [2 2 1 1 1 1 1 2 2 1]\n",
-      "  [2 2 2 2 2 2 2 2 1 1]\n",
-      "  [2 1 2 2 1 1 2 2 2 1]\n",
-      "  [2 2 1 2 2 2 1 2 1 1]\n",
-      "  [1 2 1 2 1 2 1 1 2 1]\n",
-      "  [1 2 2 1 2 2 2 2 2 2]\n",
-      "  [2 2 2 2 2 2 1 1 1 2]\n",
-      "  [2 1 2 1 1 2 2 1 2 1]]]\n"
+      " [[2 2 2 2 2 2 1 2 1 2]\n",
+      "  [1 1 2 1 2 1 2 1 1 1]\n",
+      "  [1 1 2 1 2 1 2 2 2 2]\n",
+      "  [1 2 1 1 2 1 1 1 1 1]\n",
+      "  [1 2 2 1 1 1 2 2 1 1]\n",
+      "  [2 2 2 2 2 1 2 1 1 2]\n",
+      "  [2 1 1 2 2 1 2 2 2 2]\n",
+      "  [1 2 1 2 1 2 2 1 1 2]\n",
+      "  [2 1 1 2 2 2 1 2 1 2]\n",
+      "  [1 2 1 1 1 1 1 2 2 1]]]\n"
      ]
     }
    ],
@@ -1308,11 +1308,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[2, 1, 2, 1, 1],\n",
-       "       [2, 1, 1, 2, 1],\n",
-       "       [2, 2, 2, 2, 2],\n",
-       "       [2, 1, 1, 1, 2],\n",
-       "       [2, 2, 1, 2, 1]])"
+       "array([[1, 2, 1, 1, 2],\n",
+       "       [1, 2, 2, 2, 2],\n",
+       "       [2, 2, 1, 1, 2],\n",
+       "       [2, 1, 2, 1, 2],\n",
+       "       [1, 1, 2, 2, 1]])"
       ]
      },
      "execution_count": 53,
