--- a/단어의 표현_실습2_TDM.ipynb
+++ b/단어의 표현_실습2_TDM.ipynb
@@ -1,1 +1,302 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyNJWqa617L6Ud1yRb2YNS8n"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":1,"metadata":{"id":"SepVtwqJjQNp","executionInfo":{"status":"ok","timestamp":1697177580971,"user_tz":-540,"elapsed":10,"user":{"displayName":"최준호","userId":"00706280605701392828"}}},"outputs":[],"source":["docs = ['동물원 코끼리',\n","        '동물원 원숭이 바나나',\n","        '엄마 코끼리 아기 코끼리',\n","        '원숭이 바나나 코끼리 바나나']"]},{"cell_type":"code","source":["doc_ls = []\n","for doc in docs:\n","  doc_ls.append(doc.split(' '))\n","doc_ls\n","\n","# doc_ls = [doc.split() for doc in doc_ls]\n","# doc_ls"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"jiyJe4KPkYeQ","executionInfo":{"status":"ok","timestamp":1697177580971,"user_tz":-540,"elapsed":9,"user":{"displayName":"최준호","userId":"00706280605701392828"}},"outputId":"7594ca2b-61d4-4934-9d03-76c666a964a9"},"execution_count":2,"outputs":[{"output_type":"execute_result","data":{"text/plain":["[['동물원', '코끼리'],\n"," ['동물원', '원숭이', '바나나'],\n"," ['엄마', '코끼리', '아기', '코끼리'],\n"," ['원숭이', '바나나', '코끼리', '바나나']]"]},"metadata":{},"execution_count":2}]},{"cell_type":"code","source":["word = []\n","for i in doc_ls:\n","  for j in i:\n","    if j not in word:\n","      word.append(j)\n","word"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"3eAo3xlEk0Xq","executionInfo":{"status":"ok","timestamp":1697177581491,"user_tz":-540,"elapsed":525,"user":{"displayName":"최준호","userId":"00706280605701392828"}},"outputId":"c617b664-e45a-43a3-c14d-2ca87d84f074"},"execution_count":3,"outputs":[{"output_type":"execute_result","data":{"text/plain":["['동물원', '코끼리', '원숭이', '바나나', '엄마', '아기']"]},"metadata":{},"execution_count":3}]},{"cell_type":"code","source":["import pandas as pd\n","word_count = pd.DataFrame(columns = word)\n","for i in range(1, len(docs) + 1):\n","  word_count.loc[\"문서\" + str(i)] = 0\n","for i in range(0, len(doc_ls)):\n","  for j in doc_ls[i]:\n","    word_count[j].loc[\"문서\" + str(i + 1)] += 1\n","word_count"],"metadata":{"colab":{"base_uri":"https://localhost:8080/","height":175},"id":"gAKKVGiTmg3k","executionInfo":{"status":"ok","timestamp":1697177581491,"user_tz":-540,"elapsed":6,"user":{"displayName":"최준호","userId":"00706280605701392828"}},"outputId":"b978d416-984a-49f9-d0dc-53ab7cec470c"},"execution_count":4,"outputs":[{"output_type":"execute_result","data":{"text/plain":["     동물원  코끼리  원숭이  바나나  엄마  아기\n","문서1    1    1    0    0   0   0\n","문서2    1    0    1    1   0   0\n","문서3    0    2    0    0   1   1\n","문서4    0    1    1    2   0   0"],"text/html":["\n","  <div id=\"df-2ae34248-fc2b-459d-bf7b-927ce76f0836\" class=\"colab-df-container\">\n","    <div>\n","<style scoped>\n","    .dataframe tbody tr th:only-of-type {\n","        vertical-align: middle;\n","    }\n","\n","    .dataframe tbody tr th {\n","        vertical-align: top;\n","    }\n","\n","    .dataframe thead th {\n","        text-align: right;\n","    }\n","</style>\n","<table border=\"1\" class=\"dataframe\">\n","  <thead>\n","    <tr style=\"text-align: right;\">\n","      <th></th>\n","      <th>동물원</th>\n","      <th>코끼리</th>\n","      <th>원숭이</th>\n","      <th>바나나</th>\n","      <th>엄마</th>\n","      <th>아기</th>\n","    </tr>\n","  </thead>\n","  <tbody>\n","    <tr>\n","      <th>문서1</th>\n","      <td>1</td>\n","      <td>1</td>\n","      <td>0</td>\n","      <td>0</td>\n","      <td>0</td>\n","      <td>0</td>\n","    </tr>\n","    <tr>\n","      <th>문서2</th>\n","      <td>1</td>\n","      <td>0</td>\n","      <td>1</td>\n","      <td>1</td>\n","      <td>0</td>\n","      <td>0</td>\n","    </tr>\n","    <tr>\n","      <th>문서3</th>\n","      <td>0</td>\n","      <td>2</td>\n","      <td>0</td>\n","      <td>0</td>\n","      <td>1</td>\n","      <td>1</td>\n","    </tr>\n","    <tr>\n","      <th>문서4</th>\n","      <td>0</td>\n","      <td>1</td>\n","      <td>1</td>\n","      <td>2</td>\n","      <td>0</td>\n","      <td>0</td>\n","    </tr>\n","  </tbody>\n","</table>\n","</div>\n","    <div class=\"colab-df-buttons\">\n","\n","  <div class=\"colab-df-container\">\n","    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2ae34248-fc2b-459d-bf7b-927ce76f0836')\"\n","            title=\"Convert this dataframe to an interactive table.\"\n","            style=\"display:none;\">\n","\n","  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n","    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n","  </svg>\n","    </button>\n","\n","  <style>\n","    .colab-df-container {\n","      display:flex;\n","      gap: 12px;\n","    }\n","\n","    .colab-df-convert {\n","      background-color: #E8F0FE;\n","      border: none;\n","      border-radius: 50%;\n","      cursor: pointer;\n","      display: none;\n","      fill: #1967D2;\n","      height: 32px;\n","      padding: 0 0 0 0;\n","      width: 32px;\n","    }\n","\n","    .colab-df-convert:hover {\n","      background-color: #E2EBFA;\n","      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n","      fill: #174EA6;\n","    }\n","\n","    .colab-df-buttons div {\n","      margin-bottom: 4px;\n","    }\n","\n","    [theme=dark] .colab-df-convert {\n","      background-color: #3B4455;\n","      fill: #D2E3FC;\n","    }\n","\n","    [theme=dark] .colab-df-convert:hover {\n","      background-color: #434B5C;\n","      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n","      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n","      fill: #FFFFFF;\n","    }\n","  </style>\n","\n","    <script>\n","      const buttonEl =\n","        document.querySelector('#df-2ae34248-fc2b-459d-bf7b-927ce76f0836 button.colab-df-convert');\n","      buttonEl.style.display =\n","        google.colab.kernel.accessAllowed ? 'block' : 'none';\n","\n","      async function convertToInteractive(key) {\n","        const element = document.querySelector('#df-2ae34248-fc2b-459d-bf7b-927ce76f0836');\n","        const dataTable =\n","          await google.colab.kernel.invokeFunction('convertToInteractive',\n","                                                    [key], {});\n","        if (!dataTable) return;\n","\n","        const docLinkHtml = 'Like what you see? Visit the ' +\n","          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n","          + ' to learn more about interactive tables.';\n","        element.innerHTML = '';\n","        dataTable['output_type'] = 'display_data';\n","        await google.colab.output.renderOutput(dataTable, element);\n","        const docLink = document.createElement('div');\n","        docLink.innerHTML = docLinkHtml;\n","        element.appendChild(docLink);\n","      }\n","    </script>\n","  </div>\n","\n","\n","<div id=\"df-36706493-00f0-4e61-bf32-a730f4f7ee7f\">\n","  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-36706493-00f0-4e61-bf32-a730f4f7ee7f')\"\n","            title=\"Suggest charts.\"\n","            style=\"display:none;\">\n","\n","<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n","     width=\"24px\">\n","    <g>\n","        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n","    </g>\n","</svg>\n","  </button>\n","\n","<style>\n","  .colab-df-quickchart {\n","      --bg-color: #E8F0FE;\n","      --fill-color: #1967D2;\n","      --hover-bg-color: #E2EBFA;\n","      --hover-fill-color: #174EA6;\n","      --disabled-fill-color: #AAA;\n","      --disabled-bg-color: #DDD;\n","  }\n","\n","  [theme=dark] .colab-df-quickchart {\n","      --bg-color: #3B4455;\n","      --fill-color: #D2E3FC;\n","      --hover-bg-color: #434B5C;\n","      --hover-fill-color: #FFFFFF;\n","      --disabled-bg-color: #3B4455;\n","      --disabled-fill-color: #666;\n","  }\n","\n","  .colab-df-quickchart {\n","    background-color: var(--bg-color);\n","    border: none;\n","    border-radius: 50%;\n","    cursor: pointer;\n","    display: none;\n","    fill: var(--fill-color);\n","    height: 32px;\n","    padding: 0;\n","    width: 32px;\n","  }\n","\n","  .colab-df-quickchart:hover {\n","    background-color: var(--hover-bg-color);\n","    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n","    fill: var(--button-hover-fill-color);\n","  }\n","\n","  .colab-df-quickchart-complete:disabled,\n","  .colab-df-quickchart-complete:disabled:hover {\n","    background-color: var(--disabled-bg-color);\n","    fill: var(--disabled-fill-color);\n","    box-shadow: none;\n","  }\n","\n","  .colab-df-spinner {\n","    border: 2px solid var(--fill-color);\n","    border-color: transparent;\n","    border-bottom-color: var(--fill-color);\n","    animation:\n","      spin 1s steps(1) infinite;\n","  }\n","\n","  @keyframes spin {\n","    0% {\n","      border-color: transparent;\n","      border-bottom-color: var(--fill-color);\n","      border-left-color: var(--fill-color);\n","    }\n","    20% {\n","      border-color: transparent;\n","      border-left-color: var(--fill-color);\n","      border-top-color: var(--fill-color);\n","    }\n","    30% {\n","      border-color: transparent;\n","      border-left-color: var(--fill-color);\n","      border-top-color: var(--fill-color);\n","      border-right-color: var(--fill-color);\n","    }\n","    40% {\n","      border-color: transparent;\n","      border-right-color: var(--fill-color);\n","      border-top-color: var(--fill-color);\n","    }\n","    60% {\n","      border-color: transparent;\n","      border-right-color: var(--fill-color);\n","    }\n","    80% {\n","      border-color: transparent;\n","      border-right-color: var(--fill-color);\n","      border-bottom-color: var(--fill-color);\n","    }\n","    90% {\n","      border-color: transparent;\n","      border-bottom-color: var(--fill-color);\n","    }\n","  }\n","</style>\n","\n","  <script>\n","    async function quickchart(key) {\n","      const quickchartButtonEl =\n","        document.querySelector('#' + key + ' button');\n","      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n","      quickchartButtonEl.classList.add('colab-df-spinner');\n","      try {\n","        const charts = await google.colab.kernel.invokeFunction(\n","            'suggestCharts', [key], {});\n","      } catch (error) {\n","        console.error('Error during call to suggestCharts:', error);\n","      }\n","      quickchartButtonEl.classList.remove('colab-df-spinner');\n","      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n","    }\n","    (() => {\n","      let quickchartButtonEl =\n","        document.querySelector('#df-36706493-00f0-4e61-bf32-a730f4f7ee7f button');\n","      quickchartButtonEl.style.display =\n","        google.colab.kernel.accessAllowed ? 'block' : 'none';\n","    })();\n","  </script>\n","</div>\n","    </div>\n","  </div>\n"]},"metadata":{},"execution_count":4}]},{"cell_type":"code","source":[],"metadata":{"id":"JellO2XQn7LO","executionInfo":{"status":"ok","timestamp":1697177581491,"user_tz":-540,"elapsed":5,"user":{"displayName":"최준호","userId":"00706280605701392828"}}},"execution_count":4,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 10,
+     "status": "ok",
+     "timestamp": 1697177580971,
+     "user": {
+      "displayName": "최준호",
+      "userId": "00706280605701392828"
+     },
+     "user_tz": -540
+    },
+    "id": "SepVtwqJjQNp"
+   },
+   "outputs": [],
+   "source": [
+    "docs = ['동물원 코끼리',\n",
+    "        '동물원 원숭이 바나나',\n",
+    "        '엄마 코끼리 아기 코끼리',\n",
+    "        '원숭이 바나나 코끼리 바나나']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 9,
+     "status": "ok",
+     "timestamp": 1697177580971,
+     "user": {
+      "displayName": "최준호",
+      "userId": "00706280605701392828"
+     },
+     "user_tz": -540
+    },
+    "id": "jiyJe4KPkYeQ",
+    "outputId": "7594ca2b-61d4-4934-9d03-76c666a964a9"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['동물원', '코끼리'],\n",
+       " ['동물원', '원숭이', '바나나'],\n",
+       " ['엄마', '코끼리', '아기', '코끼리'],\n",
+       " ['원숭이', '바나나', '코끼리', '바나나']]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc_ls = []\n",
+    "for doc in docs:\n",
+    "  doc_ls.append(doc.split(' '))\n",
+    "doc_ls\n",
+    "\n",
+    "# doc_ls = [doc.split() for doc in doc_ls]\n",
+    "# doc_ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 525,
+     "status": "ok",
+     "timestamp": 1697177581491,
+     "user": {
+      "displayName": "최준호",
+      "userId": "00706280605701392828"
+     },
+     "user_tz": -540
+    },
+    "id": "3eAo3xlEk0Xq",
+    "outputId": "c617b664-e45a-43a3-c14d-2ca87d84f074"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['동물원', '코끼리', '원숭이', '바나나', '엄마', '아기']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = []\n",
+    "for i in doc_ls:\n",
+    "  for j in i:\n",
+    "    if j not in word:\n",
+    "      word.append(j)\n",
+    "word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 175
+    },
+    "executionInfo": {
+     "elapsed": 6,
+     "status": "ok",
+     "timestamp": 1697177581491,
+     "user": {
+      "displayName": "최준호",
+      "userId": "00706280605701392828"
+     },
+     "user_tz": -540
+    },
+    "id": "gAKKVGiTmg3k",
+    "outputId": "b978d416-984a-49f9-d0dc-53ab7cec470c"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>동물원</th>\n",
+       "      <th>코끼리</th>\n",
+       "      <th>원숭이</th>\n",
+       "      <th>바나나</th>\n",
+       "      <th>엄마</th>\n",
+       "      <th>아기</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>문서1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>문서2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>문서3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>문서4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     동물원  코끼리  원숭이  바나나  엄마  아기\n",
+       "문서1    1    1    0    0   0   0\n",
+       "문서2    1    0    1    1   0   0\n",
+       "문서3    0    2    0    0   1   1\n",
+       "문서4    0    1    1    2   0   0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "word_count = pd.DataFrame(columns = word)\n",
+    "for i in range(1, len(docs) + 1):\n",
+    "  word_count.loc[\"문서\" + str(i)] = 0\n",
+    "for i in range(0, len(doc_ls)):\n",
+    "  for j in doc_ls[i]:\n",
+    "    word_count[j].loc[\"문서\" + str(i + 1)] += 1\n",
+    "word_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 5,
+     "status": "ok",
+     "timestamp": 1697177581491,
+     "user": {
+      "displayName": "최준호",
+      "userId": "00706280605701392828"
+     },
+     "user_tz": -540
+    },
+    "id": "JellO2XQn7LO"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 0, 0, 0, 0],\n",
+       " [1, 0, 1, 1, 0, 0],\n",
+       " [0, 2, 0, 0, 1, 1],\n",
+       " [0, 1, 1, 2, 0, 0]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TDM_matrix = []\n",
+    "TDM_matrix.append(list(word_count.loc['문서1']))\n",
+    "TDM_matrix.append(list(word_count.loc['문서2']))\n",
+    "TDM_matrix.append(list(word_count.loc['문서3']))\n",
+    "TDM_matrix.append(list(word_count.loc['문서4']))\n",
+    "TDM_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyNJWqa617L6Ud1yRb2YNS8n",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
